update:flink diagnosis